# caluhash

./: CMakeLists.txt  README.md
src/include/: caluhash.hpp
test/: example.cpp  main.cpp
